<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edwinvillatoro.snapfix.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:gravity="bottom">

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sc_logo"
            android:layout_marginTop="20dp"
            android:maxHeight="500px"
            android:maxWidth="500px"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_gravity="center"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColorHint="@color/white"
            android:paddingTop="10dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:hint="@string/email_hint"
                android:fontFamily="sans-serif"
                android:textColor="@color/dark_gray"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:background="@color/colorPrimary">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:textColor="@color/dark_gray"
                android:hint="@string/password_hint"
                android:fontFamily="sans-serif"
                android:inputType="textPassword"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <Button
        android:id="@+id/login_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_btn"
        android:textSize="20sp"
        android:background="@drawable/login_button"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:text="@string/forgot_password_prompt"
            android:textColor="@color/colorPrimaryDark"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:fontFamily="sans-serif" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:background="@null"
            android:text="@string/register_prompt"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:fontFamily="sans-serif"/>

    </LinearLayout>

</LinearLayout>
